// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDropdown Snapshot Testing matches snapshot with all account options 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown0"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-112"
          id="Dropdown0-option"
        >
          Select an account
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountDropdown Snapshot Testing matches snapshot with disabled dropdown 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="true"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-disabled is-required dropdown-133"
        data-is-focusable="false"
        data-ktp-target="true"
        id="Dropdown2"
        role="combobox"
        tabindex="-1"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title title-138"
          id="Dropdown2-option"
        >
          Development Account
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-135"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-137"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountDropdown Snapshot Testing matches snapshot with disabled state and no selection 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="true"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-disabled is-required dropdown-133"
        data-is-focusable="false"
        data-ktp-target="true"
        id="Dropdown7"
        role="combobox"
        tabindex="-1"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-134"
          id="Dropdown7-option"
        >
          Select an account
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-135"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-137"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountDropdown Snapshot Testing matches snapshot with empty options 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown3"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-112"
          id="Dropdown3-option"
        >
          Select an account
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountDropdown Snapshot Testing matches snapshot with long account name 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown6"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title title-132"
          id="Dropdown6-option"
        >
          This is an extremely long account name that tests how the component handles text overflow and layout constraints in the dropdown
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountDropdown Snapshot Testing matches snapshot with multiple account types 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown8"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title title-132"
          id="Dropdown8-option"
        >
          MongoDB Account
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountDropdown Snapshot Testing matches snapshot with selected account 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown1"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title title-132"
          id="Dropdown1-option"
        >
          Production Account
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountDropdown Snapshot Testing matches snapshot with single option 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown4"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title title-132"
          id="Dropdown4-option"
        >
          Development Account
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccountDropdown Snapshot Testing matches snapshot with special characters in options 1`] = `
<div
  class="ms-Stack flex-row css-109"
>
  <div
    class="ms-StackItem flex-fixed-width css-110"
  >
    <label
      class="field-label "
    >
      Account
      : 
    </label>
  </div>
  <div
    class="ms-StackItem flex-grow-col css-110"
  >
    <div
      class="ms-Dropdown-container"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Account"
        aria-required="true"
        class="ms-Dropdown is-required dropdown-111"
        data-is-focusable="true"
        data-ktp-target="true"
        id="Dropdown5"
        role="combobox"
        tabindex="0"
      >
        <span
          aria-invalid="false"
          class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-112"
          id="Dropdown5-option"
        >
          Select an account
        </span>
        <span
          class="ms-Dropdown-caretDownWrapper caretDownWrapper-113"
        >
          <i
            aria-hidden="true"
            class="ms-Dropdown-caretDown caretDown-131"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
  </div>
</div>
`;
